--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=operations-mcp-client
+
+spring.ai.mcp.client.type=SYNC
+spring.ai.mcp.client.request-timeout=30s
+spring.ai.mcp.client.toolcallback.enabled=false
+spring.ai.mcp.client.streamable-http.connections.tools-server.url=http://localhost:8081
+spring.ai.mcp.client.streamable-http.connections.tools-server.endpoint=/mcp
+
+# OpenAI Configuration
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4
+spring.ai.openai.chat.options.temperature=0.7
+
